Añadido breakpoint para monitores de resolución 2560 x 1440

--- a/css/style.scss
+++ b/css/style.scss
@@ -155,6 +155,10 @@ nav .redes {
   @media (min-width: 1900px) {
     margin-left: 8rem;
   }
+
+  @media (min-width: 2000px) {
+    margin-left: 13.7rem;
+  }
 }
 
 section {
