Añadidas cosas del navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import 'fonts.css';
 :root {
-  --imagen-fondo: url("../images/fondo.jpg");
-  --fuente-titulos: "Roboto";
-  --fuente-texto: "Open Sans";
+  --imagen-fondo: url('../images/fondo.jpg');
+  --fuente-titulos: 'Roboto';
+  --fuente-texto: 'Open Sans';
   --color-nav: #a72608;
   --color-principal: #e9e9ec;
   --color-enfasis: #ffe74c;
