--- a/css/style.scss
+++ b/css/style.scss
@@ -42,6 +42,7 @@ nav {
   width: 28%;
   height: 100%;
   position: fixed;
+
   @media (min-width: 1200px) {
     width: 25%;
   }
@@ -52,11 +53,16 @@ nav .usuario {
   height: 10rem;
   margin-top: 5rem;
   border-radius: 50%;
+
+  @media (min-width: 2000px) {
+    margin-top: 14rem;
+  }
 }
 
 nav h2 {
   font-size: 1.5rem;
   margin-top: 2rem;
+
   @media (min-width: 1900px) {
     font-size: 1.8rem;
   }
@@ -65,6 +71,7 @@ nav h2 {
 nav h3 {
   font-size: 1.2rem;
   font-weight: 300;
+
   @media (min-width: 1900px) {
     font-size: 1.5rem;
   }
@@ -129,10 +136,12 @@ nav .redes {
 
   .contenedorLogos {
     margin-top: 1.5rem;
+
     a {
       width: 3rem;
       height: 3rem;
       margin-right: 1rem;
+
       img {
         width: inherit;
         height: inherit;
@@ -175,6 +184,7 @@ section {
   background-color: unset;
   justify-content: center;
   align-items: center;
+
   @media print {
     display: none;
   }
