--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-family: var(--fuente-titulos);
   background-color: var(--color-nav);
   color: var(--color-principal);
@@ -43,130 +44,101 @@ nav {
   height: 100%;
   position: fixed;
 
-  @media (min-width: 1200px) {
-    width: 25%;
-  }
-}
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 84%;
+    height: 93%;
+    justify-content: space-between;
 
-nav .usuario {
-  width: 10rem;
-  height: 10rem;
-  margin-top: 5rem;
-  border-radius: 50%;
-
-  @media (min-width: 2000px) {
-    margin-top: 14rem;
-  }
-}
-
-nav h2 {
-  font-size: 1.5rem;
-  margin-top: 2rem;
-
-  @media (min-width: 1900px) {
-    font-size: 1.8rem;
-  }
-}
-
-nav h3 {
-  font-size: 1.2rem;
-  font-weight: 300;
-
-  @media (min-width: 1900px) {
-    font-size: 1.5rem;
-  }
-}
-
-nav .navegacion {
-  list-style: none;
-  margin-top: 10rem;
-  margin-right: auto;
-  margin-left: 2.2rem;
-
-  @media (min-width: 1200px) {
-    margin-left: 3.5rem;
-  }
-
-  @media (min-width: 1200px) {
-    margin-left: 3.5rem;
-  }
-
-  @media (min-width: 1440px) {
-    margin-left: 5.3rem;
-  }
-
-  @media (min-width: 1900px) {
-    margin-left: 8rem;
-  }
-
-  @media (min-width: 2000px) {
-    margin-left: 13.7rem;
-  }
-}
-
-nav .navegacion li {
-  margin: 1rem 0;
-
-  a {
-    font-size: 1.4rem;
-    color: var(--color-principal);
-    text-decoration: none;
-    transition: color 0.3s linear;
-
-    @media (min-width: 2000px) {
-      font-size: 1.8rem;
-    }
-  }
-}
-
-nav .navegacion li a:hover {
-  color: var(--color-enfasis);
-}
-
-nav .redes {
-  margin-top: auto;
-  margin-bottom: 8rem;
-  margin-right: auto;
-  margin-left: 2.2rem;
-
-  h2 {
-    font-weight: 300;
-    display: block;
-  }
-
-  .contenedorLogos {
-    margin-top: 1.5rem;
-
-    a {
-      width: 3rem;
-      height: 3rem;
-      margin-right: 1rem;
-
+    .usuario {
+      align-self: center;
+      text-align: center;
+      margin-top: 5rem;
       img {
-        width: inherit;
-        height: inherit;
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+
+        @media (min-width: 1900px) {
+          width: 13rem;
+          height: 13rem;
+        }
       }
     }
-  }
 
-  @media (min-width: 1200px) {
-    margin-left: 3.5rem;
-  }
+    h2 {
+      font-size: 1.5rem;
+      margin-top: 2rem;
 
-  @media (min-width: 1300px) {
-    margin-left: 3.5rem;
-  }
+      @media (min-width: 1900px) {
+        font-size: 1.8rem;
+      }
+    }
 
-  @media (min-width: 1440px) {
-    margin-left: 5.3rem;
-  }
+    h3 {
+      font-size: 1.2rem;
+      font-weight: 300;
 
-  @media (min-width: 1900px) {
-    margin-left: 8rem;
-  }
+      @media (min-width: 1900px) {
+        font-size: 1.5rem;
+      }
+    }
 
-  @media (min-width: 2000px) {
-    margin-left: 13.7rem;
+    .navegacion {
+      list-style: none;
+
+      li {
+        margin: 1rem 0;
+
+        a {
+          font-size: 1.4rem;
+          color: var(--color-principal);
+          text-decoration: none;
+          transition: color 0.3s linear;
+
+          &:hover {
+            color: var(--color-enfasis);
+          }
+
+          @media (min-width: 2000px) {
+            font-size: 1.8rem;
+          }
+        }
+      }
+    }
+
+    .redes {
+      margin-right: auto;
+
+      h2 {
+        margin-top: initial;
+        font-weight: 300;
+        display: block;
+      }
+
+      .contenedorLogos {
+        margin-top: 1.5rem;
+
+        a {
+          width: 3rem;
+          height: 3rem;
+
+          img {
+            width: inherit;
+            height: inherit;
+          }
+
+          &:nth-child(1) {
+            margin-right: 1rem;
+          }
+        }
+      }
+    }
+
+    @media (min-width: 1200px) {
+      width: 82%;
+    }
   }
 }
 
