Añadido contenido del portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 html {
-  font-size: 76.5%;
+  font-size: 72.5%;
   scroll-behavior: smooth;
 }
 
@@ -131,6 +131,11 @@ nav .wrapper .redes .contenedorLogos a:nth-child(1) {
     width: 82%;
   }
 }
+@media (min-width: 1200px) {
+  nav {
+    width: 25%;
+  }
+}
 
 section {
   display: flex;
@@ -141,47 +146,115 @@ section {
   height: 100vh;
   flex: 1 0 auto;
 }
-
-.portada {
+section.portada {
   background-color: unset;
   justify-content: center;
   align-items: center;
 }
-@media print {
-  .portada {
-    display: none;
-  }
-}
-
-.portada h1 {
+section.portada h1 {
   color: var(--color-principal);
   font-family: var(--fuente-texto) sans-serif;
   font-size: 2.5rem;
   font-weight: 300;
-  padding: 0 3rem 1rem 3rem;
+  padding: 0 3rem;
   text-align: center;
 }
-
-.portada h1 b {
+section.portada h1 b {
   color: var(--color-enfasis);
 }
-
-.portada a {
+section.portada a {
   background: none;
   font-size: 2rem;
   font-weight: 300;
   text-decoration: none;
+  margin-top: 1rem;
   padding: 1.2rem 1.7rem;
   color: var(--color-enfasis);
   border: 2px solid var(--color-enfasis);
   border-radius: 14px;
   transition: color 0.2s linear, border-color 0.2s linear;
 }
-
-.portada a:hover {
+section.portada a:hover {
   cursor: pointer;
   color: var(--color-principal);
   border-color: var(--color-principal);
+}
+@media print {
+  section.portada {
+    display: none;
+  }
+}
+section.portfolio .top,
+section.portfolio .bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  height: 50%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  align-items: center;
+}
+section.portfolio .top article,
+section.portfolio .bottom article {
+  height: 80%;
+  width: 25%;
+  margin-top: 1rem;
+}
+section.portfolio .top article h2,
+section.portfolio .bottom article h2 {
+  font-size: 1.3vw;
+  font-family: var(--fuente-titulos) sans-serif;
+  font-weight: 600;
+  color: var(--color-enfasis);
+  margin-bottom: 2rem;
+}
+section.portfolio .top article p,
+section.portfolio .bottom article p {
+  font-family: var(--fuente-texto) "Segoe UI" sans-serif;
+  font-weight: 300;
+  font-size: 1.2vw;
+  line-height: 1.6vw;
+  color: var(--color-principal);
+}
+section.portfolio .top article .trabajo h3,
+section.portfolio .bottom article .trabajo h3 {
+  font-size: 1.1vw;
+  font-family: var(--fuente-titulos) sans-serif;
+  font-weight: bold;
+  color: var(--color-principal);
+}
+section.portfolio .top article .trabajo h3 span,
+section.portfolio .bottom article .trabajo h3 span {
+  font-weight: 300;
+}
+section.portfolio .top article .trabajo p,
+section.portfolio .bottom article .trabajo p {
+  font-size: 0.9vw;
+  line-height: 1.2vw;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+section.portfolio .bottom article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 80%;
+}
+section.portfolio .bottom article .tecnologias {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: space-between;
+  width: 68%;
+  height: 47%;
+  margin-top: 2rem;
+  flex-direction: row;
+}
+section.portfolio .bottom article .tecnologias img {
+  flex: 1 0 21%;
+  width: 8rem;
+  height: 8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
