--- a/css/style.scss
+++ b/css/style.scss
@@ -4,8 +4,8 @@
   --imagen-fondo: url('../images/fondo.jpg');
   --fuente-titulos: 'Roboto';
   --fuente-texto: 'Open Sans';
-  --color-nav: #a72608;
-  --color-principal: #e9e9ec;
+  --color-secundario: #a72608;
+  --color-blanco: #e9e9ec;
   --color-enfasis: #ffe74c;
   --color-oscuro: #272822;
 }
@@ -13,6 +13,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -38,8 +39,8 @@ nav {
   align-items: center;
   justify-content: center;
   font-family: var(--fuente-titulos);
-  background-color: var(--color-nav);
-  color: var(--color-principal);
+  background-color: var(--color-secundario);
+  color: var(--color-blanco);
   width: 28%;
   height: 100%;
   position: fixed;
@@ -93,7 +94,7 @@ nav {
 
         a {
           font-size: 1.4rem;
-          color: var(--color-principal);
+          color: var(--color-blanco);
           text-decoration: none;
           transition: color 0.3s linear;
 
@@ -161,8 +162,8 @@ section {
     align-items: center;
 
     h1 {
-      color: var(--color-principal);
-      font-family: var(--fuente-texto) sans-serif;
+      color: var(--color-blanco);
+      font-family: var(--fuente-texto);
       font-size: 2.5rem;
       font-weight: 300;
       padding: 0 3rem;
@@ -187,8 +188,8 @@ section {
 
       &:hover {
         cursor: pointer;
-        color: var(--color-principal);
-        border-color: var(--color-principal);
+        color: var(--color-blanco);
+        border-color: var(--color-blanco);
       }
     }
 
@@ -215,26 +216,26 @@ section {
 
         h2 {
           font-size: 1.3vw;
-          font-family: var(--fuente-titulos) sans-serif;
+          font-family: var(--fuente-titulos);
           font-weight: 600;
           color: var(--color-enfasis);
           margin-bottom: 2rem;
         }
 
         p {
-          font-family: var(--fuente-texto) 'Segoe UI' sans-serif;
+          font-family: var(--fuente-texto);
           font-weight: 300;
           font-size: 1.2vw;
           line-height: 1.6vw;
-          color: var(--color-principal);
+          color: var(--color-blanco);
         }
 
         .trabajo {
           h3 {
             font-size: 1.1vw;
-            font-family: var(--fuente-titulos) sans-serif;
+            font-family: var(--fuente-titulos);
             font-weight: bold;
-            color: var(--color-principal);
+            color: var(--color-blanco);
             span {
               font-weight: 300;
             }
@@ -272,6 +273,95 @@ section {
             flex: 1 0 21%;
             width: 8rem;
             height: 8rem;
+          }
+        }
+      }
+    }
+  }
+
+  &.contacto {
+    align-items: center;
+    justify-content: center;
+
+    article {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: var(--color-blanco);
+      width: 75%;
+      height: 75%;
+
+      h2 {
+        font-size: 2rem;
+        font-weight: bold;
+        margin-top: 3rem;
+        color: var(--color-secundario);
+      }
+
+      form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 80%;
+        height: 70%;
+        margin-top: 3rem;
+        justify-content: space-evenly;
+
+        .formgroup {
+          width: 50%;
+          text-align: center;
+          &.entero {
+            width: 100%;
+          }
+
+          label {
+            font-family: var(--fuente-titulos);
+            font-size: 1.5rem;
+            font-weight: 400;
+            color: var(--color-secundario);
+          }
+
+          input,
+          textarea {
+            font-family: var(--fuente-texto);
+            display: block;
+            color: var(--color-secundario);
+            background-color: rgba(0, 0, 0, 0);
+            margin: 0 auto;
+            margin-top: 0.5rem;
+            padding: 0 1rem;
+            border: 2px solid var(--color-secundario);
+            border-radius: 20px;
+
+            &:focus {
+              outline: none;
+              border-color: var(--color-oscuro);
+            }
+          }
+
+          input {
+            height: 4rem;
+            width: 11vw;
+          }
+
+          textarea {
+            width: 73%;
+            height: 12rem;
+          }
+        }
+
+        input[type='submit'] {
+          background-color: var(--color-secundario);
+          color: var(--color-blanco);
+          font-family: var(--fuente-titulos);
+          font-size: 1.6rem;
+          height: 4.5rem;
+          width: 20rem;
+          border: none;
+          border-radius: 20px;
+
+          @media (min-width: 1599px) {
+            font-size: 1.6rem;
           }
         }
       }
